// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense list with emptyh array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Due Date
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Due Date
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={2}
      description="Gum"
      dueDate={0}
      id="alsdjfklj"
      key="alsdjfklj"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      description="Rent"
      dueDate={-345600000}
      id="23kwo8jhsdflk"
      key="23kwo8jhsdflk"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      description="Credit Card"
      dueDate={345600000}
      id="slilsdfhueh"
      key="slilsdfhueh"
      note=""
    />
  </div>
</div>
`;
